[package]
name = "asrefmut"
version = "0.1.0"
authors = ["0x182d4454fb211940"]
edition = "2021"
description = "Trait which combines `AsRef` and `AsMut`"
readme = "README.md"
repository = "https://github.com/0x182d4454fb211940/asrefmut"
license = "MIT"
keywords = ["trait", "asref", "asmut", "nostd"]
categories = ["no-std"]

[dependencies]
